src/objects/Graph_Type__c.object
<CustomObject>
    <description>A type of graph. This is used to link together all Graph Single Points or the custom sObjects that go on to a graph.</description>
    <fields>
        <fullName>Graph_Parameter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The graph definition that this type belongs to</description>
        <inlineHelpText>Choose the graph parameter that this type belongs to</inlineHelpText>
        <label>Graph Parameter</label>
        <referenceTo>Graph_Parameter__c</referenceTo>
        <relationshipLabel>Graph Types</relationshipLabel>
        <relationshipName>Graph_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <defaultValue>&quot;NONE&quot;</defaultValue>
        <description>The keyword that is being searched for. Only use this field if the graph is for the search logs</description>
        <inlineHelpText>If this graph is for search logs enter the keyword that this type captures</inlineHelpText>
        <label>Keyword</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>The label for the line or pie segment or whatever is suitable</description>
        <inlineHelpText>Enter the label for this type</inlineHelpText>
        <label>Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_Of_sObject__c</fullName>
        <description>Where the data for this type comes from</description>
        <inlineHelpText>Select where the data for this graph type is to come from</inlineHelpText>
        <label>Type Of sObject</label>
        <picklist>
            <picklistValues>
                <fullName>Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Graph Point</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <description>An identifier that is box agnostic that can be used to id a graph type. This is required if data needs to be added to the Single Point Graph objects that are below an instance of this record</description>
        <inlineHelpText>You should not be filling this in by hand unless you know what you are doing</inlineHelpText>
        <label>Unique Identifier</label>
        <type>TextArea</type>
    </fields>
    <label>Graph Type</label>
    <nameField>
        <displayFormat>GT{0000000000}</displayFormat>
        <label>Graph Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graph Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>